feat: updateShop and finished upload

--- a/src/pages/Shop/ShopList.less
+++ b/src/pages/Shop/ShopList.less
@@ -14,3 +14,13 @@
     }
   }
 }
+.avatar-uploader {
+  > :global(.ant-upload) {
+    width: 128px;
+    height: 128px;
+
+    img {
+      max-width: 100%;
+    }
+  }
+}
